--- a/templates/home.html
+++ b/templates/home.html
@@ -173,5 +173,7 @@
   
    <center> <p>Copyrights @2011</p></center></center>
   </footer>
+    <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/9182535e-a535-40be-9f6f-85d883be517b/webchat/config.js" defer></script>
   </body>
   </html>
